--- a/index.html
+++ b/index.html
@@ -3,54 +3,138 @@
 
 <head>
   <meta charset="UTF-8">
-  <title> Talha Jan </title>
+  <title> Kovid </title>
 </head>
 
 <body>
-  <img src="sauske.jpg" alt="Talha Jan website">
-  <h1> Talha Jan</h1>
-  <p><em>Welcome to my <strong>website</strong></em></p>
-  <p>i am a ios web developer ❤️and i love coffee</p>
-  <hr size="2" <hr>
-  <h3>Books and Teachings</h3>
+
+  <center>
+    <img src="Kovid.png" alt="Talha Jan website">
+  </center>
+  <center>
+    <h1>
+      <p style="color:#FF0000" ;>
+        <font face="Verdana" size="6">
+          Stay Safe. Stay Home.</font>
+      </p>
+    </h1>
+    <p>
+      <font face="Verdana" size="2">
+        Human coronaviruses are common and are typically associated with mild <br>
+        illnesses,
+        similar to the common cold.The corona virus COVID-19 is <br>
+        affecting 210 countries &amp; territories around the world and 2 international <br>
+        conveyances.
+    </p>
+    <hr size="2" <hr>
+  </center>
+  <center>
+    <h2>
+      <p style="color:#FF0000" ;>
+        <font face="Verdana" size="6">
+          Live Updates</font>
+      </p>
+
+    </h2>
+  </center>
+  <center>
+    <table>
+      <table border="1">
+
+
+        <thead>
+          <th>
+            <h2>Total cases</h2>
+          </th>
+          <th>
+            <h2>Recovered</h2>
+          </th>
+          <th>
+            <h2>Total Deaths</h2>
+          </th>
+          <th>
+            <h2>Countries</h2>
+          </th>
+        </thead>
+        <tbody>
+          <th>5738818</th>
+          <th>2467603</th>
+          <th>354610</th>
+          <th>219</th>
+        </tbody>
+      </table>
+  </center>
+
+  <center>
+    <h2>How To Protect Yourself</h2>
+  </center>
+  <center>
+    <p>
+      <font face="Verdana" size="2">It is a long established fact that a reader will be <br>distracted bythe readable content of a page when looking at its layout. <br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution
+        of letters,<br> as opposed to
+        using 'Content here, content here', making it look like readable English. <br>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>Lorem Ipsum has been the industry's standard dummy text ever since. <br>Lorem Ipsum
+        is
+        simply dummy text of the printing and typesetting industry. <br>Lorem Ipsum has been the industry's standard dummy text ever since.
+
+    </p>
+  </center>
+  <hr>
+  <h3>Dos and Don’ts</h3>
   <ul>
-    <li>Coffee</li>
-    <li>Tea</li>
-    <li>Milk</li>
+    <li>Avoid Close Contact ❌</li>
+    <li>Don’t Touch Face ❌</li>
+    <li>Don’t Shake Hands ❌</li>
   </ul>
-<h3>My Hobbies</h3>
-<ol>
-  <li>Fee</li>
-  <li>Fi</li>
-  <li>Fo</li>
-  <li>Fum</li>
-</ol>
-<h3>Roman</h3>
-<ol type="i">
-  <li><a href="#">Introduction</a></li>
-  <li><a href="#">List of Greivances</a></li>
-  <li><a href="https://www.cs.cornell.edu/home/kleinber/">Conclusion</a></li>
-</ol>
-<p>you can contact me here</p>
-<p>You can reach Michael at:</p>
+  <ul>
+    <li>Wash Your Hands ✅</li>
+    <li>Drink Much Watar ✅</li>
+    <li>Use Face Mask ✅</li>
+  </ul>
+  <hr>
 
-<a href="Hobbies.html">My Hobbies</a>
-<table>
-  <tr>
-    <td>2010-1012</td>
-    <td>Skills</td>
-    <tr>
-
-    </tr>
-    <td>Computer Sciebces</td>
-    <td>kjhds</td>
-  </tr>
-</table>
+  <center>
+    <h2>
+      <p style="color:#FF0000" ;> Coronavirus Symptoms</p>
+    </h2>
+  </center>
 
 
+  <table>
+
+    <table border="1">
+      <th>
+        <img src="symp-1.png" alt="">
+        <h2>
+
+          Dry Dough
+        </h2>
+      </th>
+      <th>
+        <img src="symp-2.png" alt="">
+        <h2>Sore Throat</h2>
+      </th>
+      <th>
+        <img src="symp-3.png" alt="">
+        <h2>Cold</h2>
+      </th>
+      <th>
+        <img src="symp-4.png" alt="">
+        <h2>Fever</h2>
+      </th>
 
 
+      <tbody>
+        <th>Continuous coughing a lot for more than an <br>hour,or 3 or more coughing episodes in 24 hours.<br>if you usually have a cough.
+        </th>
+        <th>Older people, and those with underlying medical <br>problems like high blood pressure, heart and <br>lung problems, diabetes, or cancer.
+        </th>
+        <th>People of all ages who experience fever and/or <br>cough associated with difficulty <br>eathing/shortness of breath.
+        </th>
+        <th>Fever you feel hot to touch on your <br> chest or back (you do not need to <br>measure your temperature). It is also <br>may appear in 2-10 days.
 
+        </th>
+      </tbody>
+    </table>
 
 
 </body>
